# SegPlay

./: .gitignore  Analyze.py  Analyze_Results.py  LICENSE  Lung_Segmentator.py  Pretrain_segmentator.py  README.md  config.py  pyproject.toml  requirements.txt  setup.py
docs/: DATASET_CITATION.md  EXPERIMENTS.md  introduction.md
lung_segmentator/: __init__.py  analysis.py  config.py  fine_tuning.py  layers.py  pretraining.py
