[project]
name = "lung_segmentator"
version = "0.1.0"
description = "A lightweight U-ViT-based lung segmentation package for fine-tuning, analysis, and experimentation"
readme = "README.md"
authors = [
  {name = "Arav Jha", email = "linrajesh@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
  "tensorflow>=2.11.0",
  "numpy",
  "matplotlib",
  "scikit-learn",
  "tensorflow-datasets"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/IamArav2012/SegPlay"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"